# Programmation-C

./: .gitignore  CMakeLists.txt  compte_rendu.md  eq
TP_1/: Exo_1_Compilation.c  exo.md  exo3.c  exo4.c  exo5.c  moyenne.c
TP_2/: CompteRendu2.md  exo1.c  exo2.c  exo3.c  exo4.c  exo5.c  exo6.c
TP_3/: CompteRendu3.md  EqSecondDegre.c  exo1.c  exo3.c
TP_4/: CompteRendu4.md  exo1.c  exo2.c  exo3.c  exo4.c  exo5.c  exo6.c
