cmake_minimum_required(VERSION 4.0)
project(Programmation-C C)

set(CMAKE_C_STANDARD 17)

add_executable(Programmation-C
        TP_1/Exo_1_Compilation.c)
add_executable(exo3 TP_1/exo3.c)
add_executable(exo4 TP_1/exo4.c)
add_executable(exo5 TP_1/exo5.c)
add_executable(moyenne TP_1/moyenne.c)
add_executable(exo1_TP2 TP_2/exo1.c)
add_executable(exo2_TP2 TP_2/exo2.c)
add_executable(exo3_TP2 TP_2/exo3.c)
add_executable(exo4_TP2 TP_2/exo4.c)
add_executable(exo5_TP2 TP_2/exo5.c)
add_executable(exo6_TP2 TP_2/exo6.c)
